fixed spacing of inputs

--- a/client/styles/default/styles.less
+++ b/client/styles/default/styles.less
@@ -598,7 +598,7 @@ div.add-flex-div-hide {
 }
 
 
-div.input-field.col.s4 {
+div.term-sheet-input.col.s4 {
   min-height: 11rem;
   h4 {
     text-align: center;
